# blackjack-py

./: .gitignore  README.md  app.py  cards.py  filemanager.py  game_vars.py  pyproject.toml
static/: app.css  app.js
templates/: index.html
workers/: game_manager.py  matchmaking.py
