[tool.poetry]
name = "black-jack-py"
version = "0.1.0"
description = ""
authors = ["Guilherme Iazzetta <guilherme.iazzetta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
